bugfixes and new spacing for library header

--- a/src/Components/LibraryHeader/LibraryHeader.css
+++ b/src/Components/LibraryHeader/LibraryHeader.css
@@ -1,9 +1,12 @@
 .library-header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  width: 100%;
+
+  @media (width <= 800px) {
+    justify-content: center;
+  }
 }
 
 .library-header-button {
@@ -20,8 +23,13 @@
 .library-header-options {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   align-items: center;
+  width: 30%;
+  @media (width <= 800px) {
+    width: 100%;
+    justify-content: space-evenly;
+  }
 }
 
 .library-search-bar {
